hypr/waybar: back to original gaps... fix it on waybar instead

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -5,7 +5,7 @@
   border-radius: 0;
   min-height: 0;
   font-family: 'CaskaydiaMono Nerd Font';
-  font-size: 16px;
+  font-size: 14px;
 }
 
 window#waybar {
@@ -14,11 +14,11 @@ window#waybar {
 }
 
 .modules-left {
-  margin-left: 8px;
+  margin-left: 4px;
 }
 
 .modules-right {
-  margin-right: 8px;
+  margin-right: 4px;
 }
 
 #workspaces button {
@@ -46,6 +46,7 @@ window#waybar {
 #custom-update {
   min-width: 12px;
   margin: 0 7.5px;
+  color: @foreground;
 }
 
 #custom-expand-icon {
